Bug 1567544 - set composite op in DrawDirectlyToCanvas r=jrmuizel

When drawing an SVG image onto a `CanvasRenderingContext2D`, a different code path is taken which calls `DrawDirectlyToCanvas`. Previously, that function always used the default composite operation when drawing. Now it will use the canvas context's current `globalCompositeOperation`.

Differential Revision: https://phabricator.services.mozilla.com/D66900